--- a/src/components/CustomTabBar.scss
+++ b/src/components/CustomTabBar.scss
@@ -24,7 +24,7 @@
 
     &.active {
       .tabbar-text {
-        color: #00d4aa;
+        color: #008a70;
         font-weight: 600;
       }
     }
